--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="icon" href="pf.jpeg" type="image/icon type">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -33,7 +35,7 @@
 
     <div id="main">
         <div id="page">
-            <img src="img.jpg" style="padding: 150px; border-radius: 50%;" id="pic" alt="">
+            <img src="image.jpg" style="padding: 150px; border-radius: 50%;" id="pic" alt="">
 
             <div id="text">
                 <h2>Hello</h2>
